# stock-market

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  tatus --porcelain  test_automation.py
airflow/: Dockerfile  docker-compose.yaml  env.example  requirements.txt
analytics/: __init__.py  cleanup_orphaned_records.py  daily_automation.py  database_diagnostic.py  enhanced_workflow.py  fix_symbol_ids.py  test_enhanced_workflow.py  workflow.py
archive/: docker-compose.prod.yml  docker-compose.yml  server_automation.py
backup/: get_vuaal.py  process_vuaal.py
dashboard/: MANUAL_SETUP.md  METABASE_RECOMMENDATION.md  POSTGRESQL_VS_DATABRICKS.md  QUICK_START.md  README.md  SETUP_LOCAL_TESTING.md  app.py  docker-compose.yml  requirements.txt  test_setup.bat  test_setup.sh
data/: AEEM_PA.csv  LYY7_DE.csv  VUAAL.csv  XDWH_L.csv  cndx.l.json  daily-treasury-rates-2023.csv  etf_data.json  symbols.json  vuaa.l.json
dbt/: dbt_project.yml  profiles.yml
docs/: currency_conversion.md  environment-setup.md  how_to_run_scripts.md  index.md  setup.md
how_to_run_scripts/: index.html
market/: pyvenv.cfg
scripts/: __init__.py  get_vuaal.py  init_database.sh  oracle-cloud-init.yml  run_model.py  stock_data_model.py  verify_setup.sh  visualize_yield_curve.py
search/: search_index.json
src/: run_model.py  stock_data_model.py
tests/: test_setup.py
website/: __init__.py  index.html  investment-strategy.html  market-insights.html  monitoring.html
website/js/: app.js  (+2 more)
(+97 files in other folders)
