[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-market"
version = "0.1.0"
description = "ETF analytics and visualization tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pandas>=1.5.0",
    "yfinance>=0.2.36",
    "SQLAlchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true